modules/surprise/kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: surprise
spec:
  selector: {}
  ports:
    - name: http
      port: 80
      targetPort: 80
