modules/surprise/kustomize/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: surprise
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: do.enge.me
      http:
        paths:
          - backend:
              serviceName: surprise
              servicePort: 80
            path: /
  tls:
    - hosts:
        - do.enge.me
      secretName: surprise-ssl
